test_for_others/test_2_r03.out
Error type B at Line 2: Missing closing parenthesis ')'
Error type B at Line 8: Missing closing braces ']'
Error type B at Line 7: Expected 'if' before 'else'
Error type B at Line 1: Missing closing curly bracket '}'
