test_for_others/test_2_r03.spl
float test_2_r03(int a, int b){
    if ( a==b {
        b=5;
    }
    
    while(0) a=1;
    else {
        a[3 =5;
    }
